force-app/main/default/objects/Agency__c/Agency__c.object-meta.xml
<CustomObject>
    <description>Child object to Account to relate Brands (and any other applicable Accounts) to Agencies</description>
    <label>Agency</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Agency Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agencies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>