force-app/main/default/objects/Agency__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to Agency Account</description>
    <inlineHelpText>Lookup to Agency Account</inlineHelpText>
    <label>Agency</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Agency</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Brands (Agency)</relationshipLabel>
    <relationshipName>Agencies1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>