force-app/main/default/objects/Agency__c/fields/Agency_Type__c.field-meta.xml
<CustomField>
    <fullName>Agency_Type__c</fullName>
    <label>Agency Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Creative</fullName>
            </value>
            <value>
                <fullName>Advertising</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>