force-app/main/default/objects/Agency__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description>Lookup to the Brand being represented by an Agency</description>
    <label>Brand</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Agencies</relationshipLabel>
    <relationshipName>Agencies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>